--- a/src/app/client-portfolio/client-portfolio.component.html
+++ b/src/app/client-portfolio/client-portfolio.component.html
@@ -52,36 +52,36 @@
               <div class="card-header card bg-primary text-white">
 
                 <div class="row">
-                  <div class="col-3 portfoliotext">Sector Impact</div>
-                  <div class="col-7"></div>
-                  <div class="col-2 clrfiltertext"><a style="color: white;cursor: pointer; font-size: 1.11vw;"
+                  <!-- <div class="col-3 portfoliotext">Sector Impact</div> -->
+                  <!-- <div class="col-7"></div> -->
+                  <!-- <div class="col-2 clrfiltertext"><a style="color: white;cursor: pointer; font-size: 1.11vw;"
                       (click)="clearFilter()">CLEAR ALL FILTERS</a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
 
-              <div class="card-body">
+              <!-- <div class="card-body"> -->
 
                 <!-- <label style="margin-left: 20%;"> -->
                 <!-- bar chart here -->
                 <!-- </label> -->
-                <div class="row">
+                <!-- <div class="row"> -->
                   <!-- <div class="col-sm-6"> -->
                   <!--
                           </div>
                           <div class="col-sm-6">
 
                           </div> -->
-                  <div class="col-12">
-                    <!-- <app-graph-test [clientID]="client.clientID"></app-graph-test> -->
-                    <app-sector-impact [clientID] = "client.clientID"></app-sector-impact>
+                  <!-- <div class="col-12">
+                    <app-graph-test [clientID]="client.clientID"></app-graph-test> -->
+                    <!-- <app-sector-impact [clientID] = "client.clientID"></app-sector-impact>
 
-                  </div>
+                  </div>  -->
 
 
-                </div>
+                <!-- </div>
 
-              </div>
+              </div> -->
 
             </div>
           </div>
