--- a/src/app/sector-impact/sector-impact.component.html
+++ b/src/app/sector-impact/sector-impact.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-6">
     <b style="font-size: 1.18vw">PORTFOLIO WEIGHTAGE BY SECTOR</b>
     <hr>
@@ -24,7 +24,7 @@
       <b class= "font-18">PORTFOLIO BY SECTOR: {{sectorName | uppercase}}</b>
       <hr>
       <app-sector-doughnut [data]="doughnutDataBySector"></app-sector-doughnut>
-      <!-- <app-doughnut-chart [data]="doughnutDataBySector"></app-doughnut-chart> -->
-    </ng-container>
+      <app-doughnut-chart [data]="doughnutDataBySector"></app-doughnut-chart> -->
+    <!-- </ng-container>
   </div>
-</div>
+</div> --> 
