--- a/src/app/client-insights/client-insights.component.css
+++ b/src/app/client-insights/client-insights.component.css
@@ -4,6 +4,11 @@
 
     border-bottom: 1px solid rgba(0,0,0,.125);
 } */
+/* Apply to all text in the component */
+:host {
+  font-family: 'Helvetica Neue Roman', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
 
 .card-header {
   padding: 0.75rem 1.25rem;
