--- a/src/app/client-portfolio-holdings/client-portfolio-holdings.component.css
+++ b/src/app/client-portfolio-holdings/client-portfolio-holdings.component.css
@@ -4,6 +4,12 @@
 
     border-bottom: 1px solid rgba(0,0,0,.125);
 } */
+ 
+/* Apply to all text in the component */
+:host {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
 
 .card-header {
   padding: 0.75rem 1.25rem;
