--- a/src/app/client-portfolio/client-portfolio.component.css
+++ b/src/app/client-portfolio/client-portfolio.component.css
@@ -1,3 +1,9 @@
+/* Apply to all text in the component */
+:host {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+
 .padding-10{
   padding-left: 7%;
     padding-right: 3%;
