--- a/src/app/client-risk-profile/client-risk-profile.component.css
+++ b/src/app/client-risk-profile/client-risk-profile.component.css
@@ -1,3 +1,9 @@
+/* Apply to all text in the component */
+:host {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+
 .client-title {
   text-transform: uppercase;
   font-size: 1.11vw;
