--- a/src/app/clientholding/clientholding.component.css
+++ b/src/app/clientholding/clientholding.component.css
@@ -5,6 +5,12 @@
     border-bottom: 1px solid rgba(0,0,0,.125);
 } */
 
+/* Apply to all text in the component */
+:host {
+  font-family: 'Helvetica Neue Roman', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+
 .card-header {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
