--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,7 +18,7 @@
 
 <nav class="navbar navbar-expand-md bg-light navbar-dark" *ngIf="router.url != '/login'">
   <a *ngIf="selectedClient === 'smartAssistant'" class="navbar-brand" href="#" style="color: black;">
-    <img src='{{ headerIconPath }}' class="rounded" alt="Brand icon" width="45" height="fit-content">
+    <img src='{{ headerIconPath }}' class="rounded" alt="Brand icon" width="80" height="fit-content">
   </a>
   <a *ngIf="selectedClient && selectedClient !== 'smartAssistant'" class="navbar-brand" href="#" style="color: black;">
     <img src='{{ headerIconPath }}' class="rounded" alt="Brand icon" width="80" height="fit-content">
@@ -47,7 +47,7 @@
         <a class="nav-link nav-menu" [routerLink]="['/stock-sentiment']">Stock Sentiment</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link nav-menu" [routerLink]="['/market-sentiment']">MarketSentiment</a>
+        <a class="nav-link nav-menu" [routerLink]="['/market-sentiment']">Market Sentiment</a>
       </li>
     </ul>
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
