--- a/src/app/portfolio-score/portfolio-score.component.css
+++ b/src/app/portfolio-score/portfolio-score.component.css
@@ -1,3 +1,8 @@
+/* Apply to all text in the component */
+:host {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
 .card {
   border-radius: 8px;
 }
