--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -17,7 +17,7 @@
           <hr>
           <div style="text-align: -webkit-center">
             <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions" [(update)]="updateFlag"
-              [oneToOne]="true" style="width: 90%; display: block;"></highcharts-chart>
+              style="width: 100%; display: block;"></highcharts-chart>
           </div>
 
         </div>
@@ -30,7 +30,7 @@
             <ng-template #stockName>{{clientMostImpactedByStock}}</ng-template>
             <hr class="ml-2">
 
-            <ng-container *ngIf="clientMostImpactedGraphs==false; else impactedGraphs">
+            <ng-container *ngIf="clientMostImpactedGraphs==false; else impactGraphs">
               <img src="assets/images/circle_logo.png" class="cir pt-5" alt="no pic">
               <p style="color: #A1ACCB;
           font-size: 18px;
@@ -39,10 +39,9 @@
           text-align: -webkit-center;
           width: 50%; ">Select stock from graph above to view impact to each client</p>
             </ng-container>
-            <ng-template #impactedGraphs>
-              <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptionsstockgraph" (click)="onPointSelect($event)"
-                style="width: 100%; display: block;" [(update)]="updateFlagstock" [oneToOne]="true" id="show"
-                class="design"></highcharts-chart>
+            <ng-template #impactGraphs>
+              <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptionsstockgraph"
+                [(update)]="updateFlagstock" style="width: 100%; height: 400px; display: block;"></highcharts-chart>
             </ng-template>
 
           </div>
@@ -69,13 +68,13 @@
             <i *ngIf="!newsdatesortby" class="fa fa-caret-up" aria-hidden="true" (click)="mySortNews('date')"></i> -->
                   </b></span></div>
               <!-- <div class="col-sm-2" style="font-size: 14px; color: #999999;font-family: Source Sans Pro;"> Date</div> -->
-              <div class="col-3" ><span style="font-size: 12px; color: #999999;"><b style="color: black;">SENTIMENT
-                  <i *ngIf="!newssentimentsortby" class="fa fa-caret-down" style="cursor: pointer" aria-hidden="true"
-                    (click)="mySortNews('sentiment')"></i>
-                  <i *ngIf="newssentimentsortby" class="fa fa-caret-up" style="cursor: pointer" aria-hidden="true"
-                    (click)="mySortNews('sentiment')"></i>
+              <div class="col-3"><span style="font-size: 12px; color: #999999;"><b style="color: black;">SENTIMENT
+                    <i *ngIf="!newssentimentsortby" class="fa fa-caret-down" style="cursor: pointer" aria-hidden="true"
+                      (click)="mySortNews('sentiment')"></i>
+                    <i *ngIf="newssentimentsortby" class="fa fa-caret-up" style="cursor: pointer" aria-hidden="true"
+                      (click)="mySortNews('sentiment')"></i>
 
-                </b></span>
+                  </b></span>
                 <hr>
               </div>
 
@@ -84,8 +83,7 @@
               <div *ngFor="let items of newsDetails;">
                 <div class="row">
                   <div class="col-8">
-                    <a href={{items.URL}} target="_blank"><label class="sfont"
-                        >
+                    <a href={{items.URL}} target="_blank"><label class="sfont">
                         {{items.Article_Desc}}
                         <br></label> </a>
                     <p style="color: #999999; font-size: 14px;">
