--- a/src/app/stock-sentiment/stock-sentiment.component.css
+++ b/src/app/stock-sentiment/stock-sentiment.component.css
@@ -1,3 +1,9 @@
+/* Apply to all text in the component */
+:host {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+
 /* General container styles */
 .container {
   display: flex;
