--- a/src/app/tab/tab.component.css
+++ b/src/app/tab/tab.component.css
@@ -1,3 +1,9 @@
+/* Apply to all text in the component */
+:host {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+
 .pane {
   /* background-color: #E0E0E0; */
   padding: 20px;
