--- a/src/app/tabs/tabs.component.css
+++ b/src/app/tabs/tabs.component.css
@@ -1,3 +1,9 @@
+/* Apply to all text in the component */
+:host {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+}
+
 div.head {
   overflow: hidden;
   position: relative;
